# redd-archiver

./: .env.example  .mcp.json.example  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  QUICKSTART.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.tor-only.yml  docker-compose.yml  postgres.conf  pyproject.toml  reddarc.py  requirements.txt  search_server.py  subreddits.json  version.py
api/: __init__.py  routes.py
core/: incremental_processor.py  postgres_database.py  postgres_search.py  watchful.py  write_html.py
docker/: README.md
docs/: API.md  DATA_CATALOG.md  DEPLOYMENT_TESTING.md  REGISTRY_SETUP.md  SCANNER_TOOLS.md  STATIC_DEPLOYMENT.md  TOR_DEPLOYMENT.md  TROUBLESHOOTING.md
html_modules/: __init__.py  css_minifier.py  dashboard_helpers.py  html_comments.py  html_constants.py  html_dashboard.py  html_dashboard_jinja.py  html_field_generation.py  html_pages.py  html_pages_jinja.py  html_scoring.py  html_seo.py  html_statistics.py  html_templates.py  html_url.py  html_utils.py  jinja_env.py  jinja_filters.py  platform_utils.py
mcp_server/: Dockerfile  README.md  __init__.py  pyproject.toml  server.py
mcp_server/docs/: RELEASE-NOTES.md
mcp_server/tests/: __init__.py  test_server.py
monitoring/: auto_tuning_validator.py  performance_monitor.py  performance_phases.py  performance_timing.py  streaming_config.py  system_optimizer.py
processing/: batch_processing_utils.py  incremental_statistics.py  parallel_user_processing.py
screenshots/: README.md
scripts/: update_leaderboard.py
sql/: fix_statistics.sql  indexes.sql  schema.sql
templates_jinja2/: README.md
tests/: __init__.py  conftest.py  test_all_endpoints_comprehensive.sh  test_api_routes.py  test_html_seo.py  test_incremental_processor.py  test_input_validation.py  test_jinja_filters.py  test_multiplatform_api_mcp.py  test_postgres_database_extended.py  test_postgres_resume.py  test_postgres_search.py  test_postgres_user_pages.py  test_reddit_importer.py  test_regex_utils.py  test_ruqqus_importer.py  test_search_operators.py  test_streaming_full_scale.sh  test_streaming_user_pages.py  test_voat_sql_parser.py  (+2 more)
(+72 files in other folders)
