# ABOUTME: Package configuration for reddarchiver-mcp, an MCP server for the Redd-Archiver API
# ABOUTME: Uses FastMCP to auto-generate MCP tools from the OpenAPI specification

[project]
name = "reddarchiver-mcp"
version = "1.0.0"
description = "MCP (Model Context Protocol) server for Redd-Archiver API - exposes 30+ archive endpoints (Reddit, Voat, Ruqqus) as AI-accessible tools with MCP resources"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Unlicense"}
authors = [
    {name = "Redd-Archiver Contributors"}
]
keywords = [
    "mcp",
    "model-context-protocol",
    "reddit",
    "voat",
    "ruqqus",
    "archive",
    "api",
    "ai-tools",
    "claude",
    "fastmcp"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

dependencies = [
    "fastmcp>=2.14.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/19-84/redd-archiver"
Documentation = "https://github.com/19-84/redd-archiver/tree/main/mcp#readme"
Repository = "https://github.com/19-84/redd-archiver"
Issues = "https://github.com/19-84/redd-archiver/issues"

[project.scripts]
reddarchiver-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "server.py",
    "__init__.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
asyncio_mode = "auto"
